logs/Slang/generated/keywords/5.6.2--keyword_liblist.sv.log
name: keyword_liblist
description: The 'liblist' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_liblist.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_liblist.sv:8:8: error: expected declarator
    bit liblist;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_liblist.sv:8:9: error: expected member
    bit liblist;
        ^~~~~~~
